@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.8
 
+	- fl_read_image() was broken on Intel-based Macs (STR
+	  #1490)
 	- Fl_Progress was using the wrong width to calculate 
 	  progress (STR #1492)
 	- Documentation fixes (STR #1454, STR #1455, STR #1456,
